--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 </div>    
                                 <br>
                                 <div class="excerpt">
-                                    <img src="images/createproject.png">
+                                    <img src="//images/createproject.png">
                                 </div>
                                 <br>
                                 <div class="excerpt">
