--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Colorlib" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="images/favicon.png" />
+        <link rel="shortcut icon" href="images/favicon.PNG" />
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CLibre+Baskerville:400,400italic,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css"  href='css/clear.css' />
         <link rel="stylesheet" type="text/css"  href='css/common.css' />
@@ -59,7 +59,7 @@
                                 </div>
                                 <br>
                                 <div class="excerpt">
-                                    <img src="images/actionconsole.png">
+                                    <img src="images/actionconsole.PNG">
                                 </div>
                                 <br> 
                                  <div class="excerpt">
@@ -67,7 +67,7 @@
                                 </div>    
                                 <br>
                                 <div class="excerpt">
-                                    <img src="//images/createproject.png">
+                                    <img src="//images/createproject.PNG">
                                 </div>
                                 <br>
                                 <div class="excerpt">
@@ -75,7 +75,7 @@
                                 </div>    
                                 <br>
                                 <div class="excerpt">
-                                    <img src="images/skip.png">
+                                    <img src="images/skip.PNG">
                                 </div>
                                 <br> 
                                 <div class="excerpt">
@@ -84,7 +84,7 @@
                                 </div>    
                                 <br>
                                 <div class="excerpt">
-                                    <img src="images/displayname.png">
+                                    <img src="images/displayname.PNG">
                                 </div>
                                 <div class="excerpt">
                                     Tiếp theo, chọn <span style="color:red">Action</span> bên góc menu trái. 
@@ -92,7 +92,7 @@
                                 </div>    
                                 <br>
                                 <div class="excerpt">
-                                    <img src="images/action1.png">
+                                    <img src="images/action1.PNG">
                                 </div>
                                 <br> 
                                 <div class="excerpt">
@@ -101,7 +101,7 @@
                                 </div>    
                                 <br>
                                 <div class="excerpt">
-                                    <img src="images/action2.png">
+                                    <img src="images/action2.PNG">
                                 </div>
                                 <br> 
 
@@ -110,7 +110,7 @@
                                 </div>    
                                 <br>
                                 <div class="excerpt">
-                                    <img src="images/createdialogflow.png">
+                                    <img src="images/createdialogflow.PNG">
                                 </div>
                                 <br> 
 
@@ -121,7 +121,7 @@
                                 </div>    
                                 <br>
                                 <div class="excerpt">
-                                    <img src="images/dialogflowhome.png">
+                                    <img src="images/dialogflowhome.PNG">
                                 </div>
                                 <br> 
 
@@ -133,7 +133,7 @@
                                 </div>    
                                 <br>
                                 <div class="excerpt">
-                                    <img src="images/integration.png">
+                                    <img src="images/integration.PNG">
                                 </div>
                                 <br> 
 
@@ -144,7 +144,7 @@
                                 </div>    
                                 <br>
                                 <div class="excerpt">
-                                    <img src="images/integration1.png">
+                                    <img src="images/integration1.PNG">
                                     
                                     <span>Khi đó nó sẽ kích hoạt action ở Google Assistant và chúng ta có thể vào giao diện test của Google Assistant trên web
                                     </span>
@@ -152,7 +152,7 @@
                                 <br> 
 
                                 <div class="excerpt">
-                                    <img src="images/test.png">
+                                    <img src="images/test.PNG">
                                 </div>
                                 <br> 
                                 <div class="excerpt">
@@ -165,7 +165,7 @@
                                 <br> 
 
                                 <div class="excerpt">
-                                    <img src="images/permission.png">
+                                    <img src="images/permission.PNG">
                                 </div>
                                 <br> 
 
@@ -179,7 +179,7 @@
                                 <br> 
 
                                 <div class="excerpt">
-                                    <img src="images/permission1.png">
+                                    <img src="images/permission1.PNG">
                                 </div>
                                 <br> 
                                 <div class="excerpt">
@@ -193,7 +193,7 @@
                                 <br> 
 
                                 <div class="excerpt">
-                                    <img src="images/test1.png">
+                                    <img src="images/test1.PNG">
                                 </div>
                                 <br> 
                                 
@@ -205,7 +205,7 @@
                                 <br> 
 
                                 <div class="excerpt">
-                                    <img src="images/test2.png">
+                                    <img src="images/test2.PNG">
                                 </div>
                                 <br> 
                                 <div class="clear"></div>
